Finally Beta Test

--- a/App/Views/SobrePage/sobre.html
+++ b/App/Views/SobrePage/sobre.html
@@ -4,8 +4,7 @@
             class="title-sobre-light">
             Um pouco da nossa história...
         </h1>
-        <div id="div-figure" 
-                class="div-figure-old-barber-light">
+        <div id="div-figure" class="div-figure-old-barber-light">
             <div class="div-img-old-barber-1">
                 <figure>
                     <img src="public/img/contents/old-barber.jpg" alt="Antiga Barber-Shop-Noblesse">
