--- a/App/Views/StructurePages/structurePages.html
+++ b/App/Views/StructurePages/structurePages.html
@@ -39,7 +39,7 @@
                                 <a href="http://localhost/barbearia-noblesse-local/?page=contato">Contato</a>
                             </div>
                             <button id="light-dark-theme"
-                                    onclick="themeColorHome()">                               
+                                    onclick="setThemeDarkLight()">                               
                                 <img id="icon-theme" 
                                         src="public/img/lua.png" 
                                         alt="Mudar Tema">                              
@@ -63,7 +63,7 @@
                                 <div id="menu-structure" 
                                      class="menu-structure">
                                     <button id="light-dark-theme2"
-                                            onclick="themeColorHome()">                               
+                                            onclick="setThemeDarkLight();">                               
                                         <img id="icon-theme2" 
                                             src="public/img/lua.png" 
                                             alt="Mudar Tema"
@@ -105,10 +105,11 @@
                     <p id="copyright">© Copyright Barber-Shop Noblesse</p>
                 </div>
             </footer>
+            <script src="public/js/scripts.js"></script> 
             <script src="public/js/jquery.js"></script>
             <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-            <script src="public/js/scripts.js"></script> 
+           
         </body>
     </html>
